# win-rs-experiments

./: Cargo.toml  README.md
.github/workflows/: main.yml
derive/: Cargo.toml
derive/src/: lib.rs
manifests/: 10_window_input.exe.manifest
src/: assert.rs  button.rs  class.rs  cursor.rs  debug.rs  icon.rs  input.rs  lib.rs  macros.rs  message_box.rs  rich_edit.rs  wide_string.rs  window.rs
win32/: Cargo.toml  build.rs  win-manifest.rc
win32/src/: assert.rs  button.rs  color.rs  cursor.rs  input.rs  lib.rs  macros.rs  menu.rs  simple_app.rs  task_dialog.rs  theme.rs  window.rs  window_long.rs
win32/src/layout/: controls.rs  margins.rs  mod.rs  screen.rs
