[package]
name = "dgellow_win32-experiments"
version = "0.1.0"
edition = "2021"
authors = ["Samuel El-Borai <sam@elborai.me>"]

[lib]
name = "gui"

[dependencies]

[dependencies.windows]
version = "0.29.0"
features = [
	"alloc",
	"Data_Xml_Dom",
	"Win32_Foundation",
	"Win32_System_Memory",
	"Win32_System_Threading",
	"Win32_Graphics_Gdi",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_LibraryLoader",
]